--- a/styles/base.css
+++ b/styles/base.css
@@ -1,11 +1,8 @@
-/* CSS Style Sheet for index.html the main site for wdd 230 vern wolfley*/
-
-/* import fonts from Google Fonts */
 
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
 :root {
-    /* volor de palatas general webpage */
+   
     --primary-color: #475304;
     --secondary-color: #388016;
     --accent1-color: #ffffff;
@@ -13,15 +10,15 @@
     --accent3-color: #c0c0c0;
     --accent4-color: #8c6e6e;
 
-    /* estilos de letas para el web site */
+    
     --heading-font: "Open Sans", Georgia, serif;
     --paragraph-font: "Open Sans", Arial, sans-serif;
 
-    /* these colors below should be chosen from among your palette colors above */
-    --headline-color-on-white: #06005d; /* headlines on a white background */
-    --headline-color-on-color: white; /* headlines on a colored background */
-    --paragraph-color-on-white: #184571; /* paragraph text on a white background */
-    --paragraph-color-on-color: #4d4747; /* paragraph text on a colored background */
+   
+    --headline-color-on-white: #06005d;
+    --headline-color-on-color: white; 
+    --paragraph-color-on-white: #184571; 
+    --paragraph-color-on-color: #4d4747; 
     --paragraph-background-color: #ffffff;
     --nav-link-color: #ffffff;
     --nav-background-color: #2b5d00;
@@ -51,6 +48,4 @@ h5,
 h6 {
     font-family: var(--heading-font);
 }
-/* Vista para mobile */
 
-/* Header */
