--- a/styles/base.css
+++ b/styles/base.css
@@ -1,52 +1,116 @@
+/* Imports */
+@import url('https://fonts.googleapis.com/css2?family=Lato&family=Noto+Serif&display=swap');
 
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+* {
+    border: 2px solid blue;
 
-:root {
-   
-    --primary-color: #475304;
-    --secondary-color: #388016;
-    --accent1-color: #ffffff;
-    --accent2-color: #666666;
-    --accent3-color: #c0c0c0;
-    --accent4-color: #8c6e6e;
+}
+*/
 
-    
-    --heading-font: "Open Sans", Georgia, serif;
-    --paragraph-font: "Open Sans", Arial, sans-serif;
-
-   
-    --headline-color-on-white: #06005d;
-    --headline-color-on-color: white; 
-    --paragraph-color-on-white: #184571; 
-    --paragraph-color-on-color: #4d4747; 
-    --paragraph-background-color: #ffffff;
-    --nav-link-color: #ffffff;
-    --nav-background-color: #2b5d00;
-    --nav-hover-link-color: #ffffff;
-    --nav-hover-background-color: #00539c;
+a {
+    text-decoration: none;
+    color: #000;
+}
+body {
+    font-family: 'Lato', 'Noto Serif', sans-serif;
+    margin: 0px;
+    padding: 0px;
+    background: #ffffff;
+}
+header {
+    background-color: #1D4D72;
+    color: #fff;
+    padding: 20px;
+    display: flex;
+    justify-content: center;
 }
 
-html,
-body {
+header img {
+    height: 150px;
+}
+header h1 {
+    margin-left: 20px;
+    color: #fff;
+}
+
+h2 {
+    grid-column: 1/3;
+    text-align: center;
+}
+
+hr {
+    visibility: visible;
+    border: 1px solid #daa520;
+    width: 100%;
+}
+
+header img {
+    border: 05px solid #daa520;
+}
+#menu {
+    font-size: 1.5rem;
+    border: 0;
+    background: none;
+    color: #000;
+    position: absolute;
+    right: 1rem;
+    top: 1rem;
+    cursor: pointer;
+}
+
+#menu::before {
+    content: "☰";
+    color: #daa520;;
+}
+
+#menu.open::before {
+    content: "X";
+    color: #daa520;
+}
+.navigation {
+    display: none;
+    background-color: #f0f0f0;
+}
+
+.navigation.open {
+    display: block;
+}
+
+nav {
+    background-color: #ffffff;
+    color: #000;
+    padding: 15px 10px;
+}
+
+nav ul {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+    text-align: center;
     display: flex;
     flex-direction: column;
-    min-height: 100vh;
-    height: 100%;
-    width: 100%;
-    margin: 0;
-    padding: 0;
-    font-family: var(--paragraph-font);
-    font-size: 22px;
-    line-height: 1.15;
-    background-color: #ffffff;
 }
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-    font-family: var(--heading-font);
+nav a {
+    color: #000;
+    text-decoration: none;
+    display: block;
+    padding: 5px;
+}
+
+nav a:hover {
+    color: #daa520;
+}
+
+main {
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-bottom: 20px;
+}
+.card {
+    background-color: #ffffff;
+    padding: 20px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    margin-top: 20px;
 }
 
 iframe {
@@ -55,3 +119,60 @@ iframe {
     border: 0px;
     margin-top: 30px;
 }
+
+footer {
+    background-color: #1D4D72;
+    text-align: center;
+    color: #fff;
+    padding: 20px;
+}
+.hero {
+    margin-top: 20px;
+    position: relative;
+    grid-column: 1/3;
+}
+
+.hero img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.hero-content {
+    position: absolute;
+    top: 30px;
+    left: 30px;
+    background: rgba(0, 0, 0, 0.4);
+    padding: 10px;
+    border-radius: 10px;
+}
+.hero-content p {
+    margin: 0;
+    padding: .25rem;
+    font-weight: 700;
+    font-size: 1.5rem;
+    color: white;
+}
+
+img {
+    max-width: 100%;
+    height: auto;
+}
+
+.weather-figure {
+    display: flex;
+    align-items: center;
+    margin: 0px;
+}
+
+.weather-figure img {
+    margin-right: 10px;
+    max-width: 100px;
+    height: auto;
+
+}
+
+    
+ 
+   
+ 
