--- a/lesson02/styles/design.css
+++ b/lesson02/styles/design.css
@@ -11,16 +11,16 @@ footer {
 }
 
 div.banner {
-  border: 1px solid #918989;
+  border: 1px solid #040404ec;
   padding: 1rem;
-  background-color: rgb(175, 182, 188);
-  font-weight: 700;
+  background-color: rgb(36, 161, 219);
+  font-weight: 800;
   word-break: break-word;
   text-align: center;
 }
 
 h1 {
-  border-bottom: 1px solid rgba(219, 132, 132, 0.1);
+  border-bottom: 1px solid rgba(5, 5, 5, 0.958);
   margin: 1rem 0;
 }
 
@@ -48,16 +48,16 @@ h3 {
 }
 
 .callout {
-  border: 1px solid rgba(9, 8, 8, 0.1);
+  border: 1px solid rgba(11, 9, 9, 0.947);
   color: #000;
-  background-color: #b1a8a8;
+  background-color: #d58d29;
   grid-column: 1/3;
   padding: 1rem;
 }
 
 footer {
   margin-top: 1rem;
-  border-top: 1px solid rgba(235, 219, 219, 0.1);
+  border-top: 1px solid rgba(244, 244, 97, 0.1);
   font-size: smaller;
   padding: .5rem 0;
 }
