--- a/styles/base.css
+++ b/styles/base.css
@@ -117,6 +117,11 @@ h3{
     font-family: "unlock", 'Times New Roman', Times, serif;
     color: #0c0c0c;
 }
+#hero-image {
+    width: 100%; /* Adjust the width of the image to its container */
+    height: auto; /* Automatically adjust the height based on the width to maintain the aspect ratio */
+    object-fit: cover; /* Ensure the image fills the container while keeping the aspect ratio */
+}
 
 .attribute {
     font-size: 1em;
