--- a/styles/medium.css
+++ b/styles/medium.css
@@ -53,7 +53,7 @@
       padding: 0.2rem;
       font-size: 1.2rem;
       letter-spacing: 0.05rem;
-      color: red;
+      color: rgb(9, 9, 9);
   }
 
   .container-main-title {
